<resources>
    <string name="app_name">SanchozGamesStore</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Basket">Basket</string>
    <string name="Catalog">Catalog</string>
    <string name="Profile">Profile</string>

    <string name="ReleaseDateColon">Release date:</string>
    <string name="About">About</string>
    <string name="ReadFull">Read full</string>
    <string name="WhereToBuy">Where to buy?</string>
    <string name="TBD">TBD</string>
    <string name="Platforms">Platforms</string>
    <string name="Genres">Genres</string>
    <string name="Developers">Developers</string>
    <string name="Publishers">Publishers</string>
    <string name="Metacritic">Metacritic</string>
    <string name="Tags">Tags</string>
    <string name="ViewAll">view all</string>

    <string name="NotRatedYet">Not rated yet</string>
    <string name="NoScreenshots">No screenshots</string>
    <string name="TBA">TBA</string>
    <string name="NoAvailableStores">No available stores</string>

    <string name="NumberOutOfTotal">%d из %d</string>

    <string name="Username_lc">username</string>
    <string name="Fullname_lc">full name</string>
    <string name="Email_lc">email</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>

    <string name="FavoriteGames">Favorite games</string>
    <string name="NoFavoriteGamesYet">No favorite games yet</string>

    <string name="Login">Log in</string>
    <string name="Continue">Continue</string>
    <string name="required_field">Required field</string>

    <string name="search">Search</string>
    <string name="ThereWereNoResultsMatchingTheQuery">There were no results matching the query.</string>

    <string name="Plug_GameName">Game title</string>
    <string name="Plug_GameReleaseDate">01.01.1977</string>
    <string name="Plug_GameDescription">Rockstar Games went bigger, since their previous installment of the series. You get the complicated and realistic world-building from Liberty City of GTA4 in the setting of lively and diverse Los Santos, from an old fan favorite GTA San Andreas. 561 different vehicles (including every transport you can operate) and the amount is rising with every update. \nSimultaneous storytelling from three unique perspectives: \nFollow Michael, ex-criminal living his life of leisure away from the past, Franklin, a kid that seeks the better future, and Trevor, the exact past Michael is trying to run away from. \nGTA Online will provide a lot of additional challenge even for the experienced players, coming fresh from the story mode. Now you will have other players around that can help you just as likely as ruin your mission. Every GTA mechanic up to date can be experienced by players through the unique customizable character, and community content paired with the leveling system tends to keep everyone busy and engaged.</string>
    <string name="Plug_GameStore">Playstation Store</string>
    <string name="Plug_GameMetaDataSequence">PlayStation 5,\nXbox Series S/X,\nPlayStation 4,\nPC,\nPlayStation 3,\nXbox 360,\nXbox One</string>
    <string name="Plug_GameMetacriticScore">100</string>
    <string name="Plug_GamePlatform">Xbox Series S/X</string>
    <string name="Plug_GameTags">Singleplayer, Steam Achievements, Multiplayer, Atmospheric, Full controller support, Great Soundtrack, RPG, Co-op, Open World, cooperative, First-Person, Third Person, Funny, Sandbox, Comedy, Third-Person Shooter, Moddable, Crime, vr mod</string>
    <string name="Plug_ProfileBusinessCardSectionLabel">username</string>
    <string name="Plug_ProfileBusinessCardSectionTitle">TestSanchoz</string>

</resources>